--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
 		"predev": "pnpm run generate",
 		"prebuild": "pnpm run generate",
 		"lint": "next lint --dir src --fix",
-		"generate": "graphql-codegen --config .graphqlrc.ts",
-		"prepare": "husky install",
-		"test": "playwright test"
+		"generate": "graphql-codegen --config .graphqlrc.ts"
 	},
 	"dependencies": {
 		"@adyen/adyen-web": "5.53.3",
@@ -67,7 +65,6 @@
 		"eslint-plugin-import": "2.29.1",
 		"eslint-plugin-playwright": "0.18.0",
 		"graphql-tag": "2.12.6",
-		"husky": "8.0.3",
 		"lint-staged": "15.1.0",
 		"postcss": "8.4.32",
 		"prettier": "3.1.1",
